--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -4,7 +4,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    position: fixed;
+    z-index: 10;
+    display: none;
+    position: fixed;    
     background-color: rgba(0,0,0,.25);
 }
 
