--- a/src/App.css
+++ b/src/App.css
@@ -28,73 +28,6 @@ button.btn.btn-green
     background-color: #4caf50;    
 }
 
-.row
-{
-    width: 100%;
-    display: table;
-}
-
-.row .Group
-{
-    float: left;
-    position: relative;
-    margin-bottom: 15px;
-}
-
-.row .Group.G-3
-{
-    width: 25%;
-}
-
-.row .Group.G-4
-{
-    width: 33.33%;
-}
-
-.row .Group.G-6
-{
-    width: 50%;
-}
-
-.row .Group.G-12
-{
-    width: 100%;
-}
-
-.row .Group label
-{
-    font-size: 14px;
-    font-weight: bold;
-    margin: 15px 0 5px 0;
-    text-transform: uppercase;
-}
-
-.row .Group input
-{
-    width: 100%;
-    height: 30px;
-    padding: 20px;
-    outline: none;
-    display: block;
-    font-weight: bold;
-    border-radius: 4px;
-}
-
-.padding-right-5
-{
-    padding-right: 5px;
-}
-
-.padding-left-5
-{
-    padding-left: 5px;
-}
-
-.padding-5
-{
-    padding: 0 5px;
-}
-
 .container
 {
     margin: 0 auto;
@@ -104,4 +37,16 @@ button.btn.btn-green
 .box-shadow
 {
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.19), 0 4px 20px 0 rgba(0,0,0,0.19);
+}
+
+.body
+{
+    left: 0;
+    right: 0;
+    top: 186px;
+    z-index: 1;
+    margin: auto;
+    bottom: 146px;
+    position: fixed;
+    max-width: 1200px;
 }
