--- a/src/components/Bar.css
+++ b/src/components/Bar.css
@@ -1,35 +1,9 @@
-.container .bar
+.bar
 {
     left: 0;
     right: 0;
-    bottom: 105px;
-    padding: 20px 0;
+    bottom: 246px;
+    height: 100px;
     position: absolute;
-    background-color: #33CC66;
-}
-
-.container .bar .content
-{
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-.container .bar .content button
-{
-    padding: 12px;
-    color: #263238;
-    font-size: 18px;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 4px;
-    margin-right: 10px;
-    border: 2px solid #263238;
-    background-color: transparent;
-}
-
-.container .bar .content button:hover
-{
-    color: #e7eef1;
-    border: 2px solid #2d8665;
-    background-color: #2d8665;
+    background-color: #666;
 }
