--- a/src/components/Budget.css
+++ b/src/components/Budget.css
@@ -47,8 +47,11 @@
 {
     padding: 15px;
     font-size: 18px;
+    overflow: hidden;
     font-weight: bold;
     text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .budget .content .title-2
