--- a/src/components/modal/ModalResponse.css
+++ b/src/components/modal/ModalResponse.css
@@ -11,9 +11,10 @@
     text-align: center;
 }
 
-.shadow .modal.modal-response.error .header
+.shadow .modal.modal-response.error .header svg:nth-child(1),
+.shadow .modal.modal-response:not(.error) .header svg:nth-child(2)
 {
-    background-color: #f44336;
+    display: none;
 }
 
 .shadow .modal.modal-response .body
@@ -32,8 +33,8 @@
 
 .shadow .modal.modal-response .body .message
 {
+    margin: 10px 0;
     font-size: 18px;
-    margin: 10px 0 40px;
 }
 
 .shadow .modal.modal-response .footer
@@ -49,8 +50,19 @@
     font-size: 16px;
     padding: 12px 20px;
     border-radius: 4px;
-    text-transform: uppercase;
-    background-color: orange;
+    text-transform: uppercase;    
+}
+
+.shadow .modal.modal-response.error .header,
+.shadow .modal.modal-response.error .footer button
+{
+    background-color: #f44336;
+}
+
+.shadow .modal.modal-response.success .header,
+.shadow .modal.modal-response.success .footer button
+{
+    background-color: #4caf50;
 }
 
 .shadow .modal.modal-response .footer button span
