--- a/src/components/modal/ModalPayment.css
+++ b/src/components/modal/ModalPayment.css
@@ -96,24 +96,20 @@
     margin-bottom: 10px;
 }
 
-.shadow .modal.modal-payment .body .left .notes
-{
-    
-}
-
 .shadow .modal.modal-payment .body .left .notes .note
 {
-    float: left;
-    width: 234px;
+    float: left;    
 }
 
 .shadow .modal.modal-payment .body .left .notes .note:nth-child(1)
 {
+    width: 300px;
     margin-right: 10px;
 }
 
 .shadow .modal.modal-payment .body .left .notes .note:nth-child(2)
 {
+    width: 168px;
     margin-left: 10px;
 }
 
@@ -155,7 +151,28 @@
     width: 100%;
     height: 242px;
     padding: 15px;
+    font-size: 16px;
     background-color: #e7e7e7;
+}
+
+.shadow .modal.modal-payment .body .right .data .label,
+.shadow .modal.modal-payment .body .right .data .value
+{
+    width: 50%;
+    padding: 10px;
+}
+
+.shadow .modal.modal-payment .body .right .data .label
+{
+    
+    float: left;
+    text-align: right;
+}
+
+.shadow .modal.modal-payment .body .right .data .value
+{
+    float: right;    
+    text-align: left;
 }
 
 .shadow .modal.modal-payment .body .right .seller
