--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.header
+#header
 {
     top: 0;
     left: 0;
@@ -8,13 +8,13 @@
     position: absolute;
 }
 
-.header .container
+#header .container
 {
     height: 128px;
     position: relative;
 }
 
-.header .container .logo
+#header .container .logo
 {
     float: left;
     width: 228px;
@@ -25,41 +25,41 @@
     background-image: url(../assets/logo.png);
 }
 
-.header .container label
+#header .container label
 {
     color: #fff;
 }
 
-.header .container .companies,
-.header .container .reference
+#header .container .companies,
+#header .container .reference
 {
     float: left;
     margin-top: 58px;
     margin-left: 38px;
 }
 
-.header .container .reference
+#header .container .reference
 {
     width: 138px;
     margin-left: 30px;
 }
 
-.header .container .reference div[role="combobox"]
+#header .container .reference div[role="combobox"]
 {
     width: 134px;
     font-size: 16px;
     padding: 12px 32px 11px 12px
 }
 
-.header .container .companies .rs-picker-toggle,
-.header .container .reference div[role="combobox"]
+#header .container .companies .rs-picker-toggle,
+#header .container .reference div[role="combobox"]
 {
     border-radius: 4px;
     border: 1px solid #419744;
     background-color: #333 !important;
 }
 
-.header .container .reference div[role="combobox"] span
+#header .container .reference div[role="combobox"] span
 {
     color: #fff;
     text-align: center;
@@ -71,7 +71,7 @@
     top: 12px !important;
 }
 
-.header .container .reference input
+#header .container .reference input
 {
     width: 128px;
     color: #fff;
@@ -80,24 +80,24 @@
     background-color: #333 !important;
 }
 
-.header .container .companies
+#header .container .companies
 {
     width: 280px;    
 }
 
-.header .container .companies .rs-picker-toggle
+#header .container .companies .rs-picker-toggle
 {   
     width: 280px;
     padding: 12px 32px 11px 12px;   
 }
 
-.header .container .companies .rs-picker-toggle span
+#header .container .companies .rs-picker-toggle span
 {
     color: #fff;
     font-size: 16px;
 }
 
-.header .container button.refresh
+#header .container button.refresh
 {
     z-index: 1;
     width: 48px;
@@ -113,7 +113,7 @@
     background-color: #22882d;
 }
 
-.header .container .toggles
+#header .container .toggles
 {
     top: 16px;
     left: 258px;
@@ -121,14 +121,14 @@
     position: absolute;
 }
 
-.header .container .toggles .toggle
+#header .container .toggles .toggle
 {
     float: left;
     width: 138px;
     margin-right: 38px;
 }
 
-.header .container .toggles .toggle b
+#header .container .toggles .toggle b
 {
     top: 2px;
     color: #fff;
@@ -137,7 +137,7 @@
     position: relative;
 }
 
-.header .container .date
+#header .container .date
 {
     float: right;
     width: 446px;
@@ -147,7 +147,7 @@
     text-transform: uppercase;
 }
 
-.header .container .date button
+#header .container .date button
 {
     float: right;
     color: #fff;
