--- a/src/components/print/Print.css
+++ b/src/components/print/Print.css
@@ -13,6 +13,13 @@
     border-radius: 50% !important;
 }
 
+.button-print:focus,
+.button-print-close:focus
+{
+    padding: 12px;
+    border: 2px solid #fff;
+}
+
 .button-print
 {
     bottom: 94px;
@@ -52,5 +59,4 @@
 {
     margin: 0;
     padding: 0;
-    width: 80mm;
 }
