--- a/src/components/print/PrintOE.css
+++ b/src/components/print/PrintOE.css
@@ -195,6 +195,7 @@
     left: 20px;
     right: 20px;
     bottom: 160px;
+    font-size: 10px;
     position: absolute;
 }
 
@@ -241,6 +242,7 @@
 {
     height: 60px;
     padding: 5px;
+    font-size: 10px;
 }
 
 .print-oe .data-print .footer
@@ -304,7 +306,11 @@
     {
         margin: 0;
         width: 100%;
-        height: 1086px;
+        height: 1086px;        
+    }
+
+    .print-oe .data-print:not(:last-child)
+    {
         page-break-after: always;
     }
 
@@ -315,7 +321,7 @@
 
     .print-oe .data-print .footer
     {
-        width: 718px;
+        width: 740px;
         bottom: 10px;
     }
 }
