--- a/src/components/modal/ModalChange.css
+++ b/src/components/modal/ModalChange.css
@@ -52,7 +52,7 @@
     margin: 10px;
 }
 
-.rs-form-vertical .rs-form-group .rs-input-group
+.shadow .modal.modal-change .body .rs-form-vertical .rs-form-group .rs-input-group
 {
     width: 120px;
 }
