--- a/src/components/print/PrintNFCe.css
+++ b/src/components/print/PrintNFCe.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     margin: 10px auto;
     line-height: 12px;
+    font-weight: bold;
     text-align: center;
     position: relative;
     font-family: Roboto;
