--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,13 @@ button.btn:disabled
 {
     overflow-y: auto;
 }
+
+.un-selectable
+{
+    -webkit-touch-callout: none; /* iOS Saf60ari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
